fix overflow

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
+   overflow: hidden;
 }
 
 header {
